--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.66.1",
+    "@types/babel__core": "^7.20.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.13.0",
+    "@types/node": "^18.13.0",
     "aws-cdk": "2.66.1",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
@@ -21,6 +22,7 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@types/babel__generator": "^7.6.4",
     "aws-cdk-lib": "2.66.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
