--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "@types/babel__generator": "^7.6.4",
-    "aws-cdk-lib": "2.66.1",
+    "aws-cdk-lib": "^2.66.1",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1327.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
