--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "tconnect-backend": "bin/tconnect-backend.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --outDir dist",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
