--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "package": "cd dist && zip -r ../dist/main.zip *" 
+    "packageTwo": "cd dist && zip -r ../dist/main.zip *",
+    "package": "cd dist/lib/backend && npm install --production && zip -r ../../main.zip * && cd ../../.."
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.66.1",
