--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "tconnect-backend": "bin/tconnect-backend.js"
   },
   "scripts": {
-    "build": "tsc --outDir dist",
+    "move": "rsync -rc lib/backend/ dist/",
+    "build": "cd lib/backend && npm install --production && tsc --outDir ../../dist",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "package": "cd dist && zip -r ../dist/main.zip *" 
+    "package": "cd dist && zip -r ../dist/main.zip *"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.66.1",
