--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.66.1",
+    "@types/async": "^3.2.18",
     "@types/babel__core": "^7.20.0",
+    "@types/chai": "^4.3.4",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@types/sinon": "^10.0.13",
     "aws-cdk": "2.66.1",
+    "chai": "^4.3.7",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
@@ -29,6 +33,7 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1327.0",
     "constructs": "^10.0.0",
+    "sinon": "^15.0.3",
     "source-map-support": "^0.5.21"
   }
 }
